--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -34,7 +34,7 @@
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestRegressor,AdaBoostRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor,AdaBoostRegressor,GradientBoostingRegressor\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.linear_model import LinearRegression, Ridge,Lasso\n",
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
